--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -4,5 +4,5 @@
 /* tailwind.css */
 /* tailwind.css */
 .input-field {
-  @apply w-full p-3 border border-gray-300 rounded-md focus:outline-none focus:ring-2 focus:ring-blue-500;
+  @apply w-full p-4 border border-[rgb(114,198,250)] rounded-md focus:outline-none focus:ring-2 focus:ring-blue-100;
 }
